--- a/public/index.html
+++ b/public/index.html
@@ -47,37 +47,98 @@
 			</div>
 		</section>
 		<section class="bg-gray">
-			<div class="container-fluid">
-				<div class="col-xs-12">
-					<div class="col-xs-5">
+			<div class="container-fluid pl-0 pr-0">
+				<div class="col-xs-12 pl-0 pr-0">
+					<div class="col-xs-4 pl-0">
 						<img src="assets/img/pic01.jpg" alt="cachorro skate" class="imagen">
 					</div>
-					<div class="col-xs-7">
-						<h3 class="text-uppercase">es un perro rescatado</h3>
+					<div class="col-xs-8 p-7">
+						<h3 class="text-uppercase mb-3">es un perro rescatado</h3>
 						<p>Fueron rescatados del abandono o una mala crianza. Todos ellos han pasado por un poco de socialización en los albergues, lo que garantiza su recuperación</p>
 					</div>
 				</div>
-				<div class="col-xs-12">
-					<div class="col-xs-7">
-						<h3 class="text-uppercase">es un perro único</h3>
+				<div class="col-xs-12 pl-0 pr-0">
+					<div class="col-xs-8 p-7">
+						<h3 class="text-uppercase mb-3">es un perro único</h3>
 						<p>Todos son sobrevivientes, son hérores con historias y experiencias que los hacen unicos</p>
 					</div>
-					<div class="col-xs-5">
+					<div class="col-xs-4 pr-0">
 						<img src="assets/img/pic02.jpg" alt="cachorro laptop" class="imagen">
 					</div>
 				</div>
-				<div class="col-xs-12">
-					<div class="col-xs-5">
+				<div class="col-xs-12 pl-0 pr-0">
+					<div class="col-xs-4 pl-0">
 						<img src="assets/img/pic03.jpg" alt="cachorro" class="imagen">
 					</div>
-					<div class="col-xs-7">
-						<h3 class="text-uppercase">es un perro noble</h3>
+					<div class="col-xs-8 p-7">
+						<h3 class="text-uppercase mb-3">es un perro noble</h3>
 						<p>Un Puppy Love agradecerá siempre poder compartir su vida a tu lado. Sera un amigo fiel que te acompañara y alegrera tus dias.</p>
 					</div>
 				</div>
 			</div>
 			
 		</section>
+		<section class="bg-purple">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 text-center mt-7">
+						<h3 class="text-uppercase mb-3">cuidados que debe tener un Puppy Love</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum velit nemo numquam molestiae sunt modi nostrum rerum minus deserunt quasi voluptatibus, facilis architecto, eius reprehenderit labore eos eum rem accusamus!</p>
+					</div>
+					<div class="col-xs-12">
+						<div class="col-xs-12 col-sm-6 p-7">
+							<i class="icon bone-rotate"></i>
+							<h3 class="text-uppercase mb-3">Alimentacion adecuada</h3>
+							<p>Asegurate que su dieta vaya a corde a su edad y peso. Es importante para una buena calidad de vida</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 p-7">
+							<i class="icon home"></i>
+							<h3 class="text-uppercase mb-3">espacios idóneos</h3>
+							<p>Proporcionale un espacio donde pieda jugar, decansar, desencolverse y ser parte activa de la vida de tu familia</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 p-7">
+							<i class="icon pet"></i>
+							<h3 class="text-uppercase mb-3">familia</h3>
+							<p>Son de gran beneficio para niños y adultos mayores, siempre que se decida cuidar de ellos en consciencia</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 p-7">
+							<i class="icon track"></i>
+							<h3 class="text-uppercase mb-3">huellita</h3>
+							<p>Implican una gran responsabilidad. Debemos tener en cuenta que adoptarlos supone una gran responsabilidad, costes economicos adicionales y una atencion constante.</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 p-7">
+							<i class="icon dog"></i>
+							<h3 class="text-uppercase mb-3">adopta</h3>
+							<p>Serán tus mejores amigos, estaran contigo y serán parte de tu familia</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 p-7">
+							<i class="icon track-two"></i>
+							<h3 class="text-uppercase mb-3">Apadrina</h3>
+							<p>Puedes apadrinarlos, son amistosos, educados y necesitan de tu cariño</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="container">
+				<div class="row mt-7">
+					<div class="col-xs-12 mt-7">
+						<div class="col-xs-12 col-sm-6">
+							<h3 class="text-uppercase mb-3">conocelos</h3>
+							<p>Nosotros te ayudaremos a encontrar un Puppy Love para que sea parte tu familia; hay muchos que esperan!</p>
+						</div>
+						<div class="col-xs-12 col-sm-6">
+							<button class="text-uppercase">adoptar</button>
+							<button class="text-uppercase transparent">leer mas</button>
+						</div>
+					</div>
+					
+				</div>
+			</div>			
+		</footer>
+
+
 		<script src="assets/js/bootstrap.min.js"></script>
 	</body>
 </html>
